crates/review-buddy/tests/snapshots/diff_wrap__wrap_on_160x40_dusk.snap
---
source: crates/review-buddy/tests/diff_wrap.rs
expression: text(&render(&mut a))
---
 review buddy  ·  no sources · 0 changes                                                                                                                   Dusk
 GH o/r#1 · title not loaded yet
╭ files 1 ───────────────────────╮╭ src/wrap.rs ───────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│› · src/wrap.rs            +1 −1││              @@ -1,6 +1,6 @@ fn long()                                                                                     │
│                                ││     1    1   let short = 1;                                                                                                │
│                                ││     2      - let removed = "alpha beta gamma delta epsilon zeta eta theta iota kappa lambda mu nu xi omicron pi rho sigma t│
│                                ││     ↪      - au upsilon";                                                                                                  │
│                                ││›         2 + let added = "w000 w001 w002 w003 w004 w005 w006 w007 w008 w009 w010 w011 w012 w013 w014 w015 w016 w017 w018 w0│
│                                ││          ↪ + 19 w020 w021";                                                                                                │
│                                ││     3    3       let tabbed = "a b   c   d   e   f   g   h   i   j   k   l   m   n   o   p   q   r   s   t   u   v   w   x │
│                                ││     ↪    ↪      y   z";                                                                                                    │
│                                ││     4    4   let cjk = "日 本 語 の と て も 長 い 文 字 列 が こ こ に 入 り ま す 。 日 本 語 の と て も 長 い 文 字 列 が こ こ に 入 り ま す 。 日 本 語 の と て も  │
│                                ││     ↪    ↪   長 い 文 字 列 が こ こ に 入 り ま す 。 ";                                                                                │
│                                ││     5    5   let end = 2;                                                                                                  │
│                                ││                                                                                                                            │
│                                ││                                                                                                                            │
│                                ││                                                                                                                            │
│                                ││                                                                                                                            │
│                                ││                                                                                                                            │
│                                ││                                                                                                                            │
│                                ││                                                                                                                            │
│                                ││                                                                                                                            │
│                                ││                                                                                                                            │
│                                ││                                                                                                                            │
│                                ││                                                                                                                            │
│                                ││                                                                                                                            │
│                                ││                                                                                                                            │
│                                ││                                                                                                                            │
│                                ││                                                                                                                            │
│                                ││                                                                                                                            │
│                                ││                                                                                                                            │
│                                ││                                                                                                                            │
│ Your review · pending ─────────││                                                                                                                            │
│Nothing pending yet.            ││                                                                                                                            │
│0 of 1 file viewed              ││                                                                                                                            │
│a approve · c comment           ││                                                                                                                            │
│x request changes · R review    ││                                                                                                                            │
│                                ││                                                                                                                            │
╰────────────────────────────────╯╰ hunk 1 of 1 · file 1 of 1 · wrap ──────────────────────────────────────────────────────────────────────────────────────────╯
 j/k move  n/p hunk  ← → file  tab pane  c comment  a approve  R submit a review  o open  y copy  esc back  ? help  T theme
